--- a/pages/contact.html
+++ b/pages/contact.html
@@ -138,14 +138,16 @@
                     <p>Wastexpert</p>
 
                 </div>
-                <div class="col-lg-6" id="desktopSuscribeForm">
+                <div class="col-lg-6">
                     <label for="subscribe">Subscribe to our Newsletter</label>
                     <div class=" d-flex">
-                        <input type="email" placeholder="Enter your email address here" name="email"
+                        <input type="email" placeholder="Enter your email address here" name="subscription"
                             id="subscribe">
-                        <button type="submit" style="color: #fff;">Sign up</button>
+                        <button><a href="/index.html">Sign up</a></button>
                     </div>
+
                 </div>
+
             </div>
             <div class="row content">
                 <div class="col-lg-4">
@@ -234,6 +236,13 @@
                         </li>
                     </ul>
                 </div>
+
+
+
+
+
+
+
             </div>
 
             <div class="row">
@@ -275,8 +284,14 @@
                 <label for="subscribe">Subscribe to our Newsletter</label>
                 <div class=" d-flex ">
                     <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
-                    <button type="submit"><a href="">Sign up</a></button>
+                    <button type="submit"><a href="/index.html">Sign up</a></button>
                 </div>
+
+
+
+
+
+
             </div>
             <div class="col-lg-12">
                 <ul>
