--- a/pages/contact.html
+++ b/pages/contact.html
@@ -143,7 +143,7 @@
                     <div class=" d-flex">
                         <input type="email" placeholder="Enter your email address here" name="subscription"
                             id="subscribe">
-                        <button><a href="/index.html">Sign up</a></button>
+                        <button><a href="/index.html#desktopFormSubmit">Sign up</a></button>
                     </div>
 
                 </div>
@@ -284,7 +284,7 @@
                 <label for="subscribe">Subscribe to our Newsletter</label>
                 <div class=" d-flex ">
                     <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
-                    <button type="submit"><a href="/index.html">Sign up</a></button>
+                    <button type="submit"><a href="/index.html#desktopFormSubmit">Sign up</a></button>
                 </div>
 
 
