--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,8 +27,10 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <div class="logo">
-                <img class="waste" src="/Images/logo.svg" alt="Logo">
-                <span> Wastexpert</span>
+                <a href="/" style="text-decoration: none; display:inherit; align-items: inherit; font-size: inherit; font-weight: inherit;">
+                    <img class="waste" src="/Images/logo.svg" alt="Logo">
+                    <span> Wastexpert</span>
+                </a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
