--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,19 +40,19 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav  mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About us</a>
+                        <a class="nav-link active" aria-current="page" href="/pages/AboutUS.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">services</a>
+                        <a class="nav-link" href="/pages/services.html">services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="/pages/FAQ.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="/pages/loginPage.html">Login</a>
                     </li>
                 </ul>
 
